--- a/views/loadtest.ejs
+++ b/views/loadtest.ejs
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <script type="text/javascript">
-        var timerStart = Date.now();
-    </script>
-	<title>Testing my scalability</title>
-	<script type="text/javascript" src="/javascript/jquery.js"></script>
-	
+  <title>Testing my scalability</title>
+  <script type="text/javascript" src="/javascript/jquery.js"></script>
 </head>
 <body>
 <button>Load Test</button>
   <script type="text/javascript">
-   	$(document).ready(function() {
-      console.log("Time until DOMready: ", Date.now()-timerStart);
-  	});
-   	$(window).load(function() {
-      console.log("Time until everything loaded: ", Date.now()-timerStart);
-  	});
+    $(document).ready(function() {
+      $('button').click(function(){
+        var count = 0;
+        var loadTest = setInterval(function(){
+          //SEND REQUEST
+        }, <TIME BETWEEN EACH REQUEST>);
+
+        setTimeout(function(){
+          clearInterval(loadTest);
+        }, <DURATION OF TEXT>)
+      })
+    });
+
   </script>
 </body>
 </html>
