--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -4,8 +4,13 @@
 <doctype html>
 <html>
     <script type="text/javascript">
-        var timerStart = Date.now();
-        //TIMER SCRIPT. USE Window.onLoad
+      var timerStart = Date.now();
+	    $(document).ready(function() {
+	      console.log("Time until DOMready: ", Date.now()-timerStart);
+	  	});
+	   	$(window).load(function() {
+	      console.log("Time until everything loaded: ", Date.now()-timerStart);
+	  	});
     </script>
 	<title>Testing my scalability</title>
 	<style type="text/css">
