--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/text_rtl.css">
 	<link rel="stylesheet" type="text/css" href="/css/text.css">
 	<link rel="stylesheet" type="text/css" href="/css/fluidable.css">
-	<link rel="stylesheet" type="text/css" href="/css/site.css">`
+	<link rel="stylesheet" type="text/css" href="/css/site.css">
 	<link rel="stylesheet" type="text/css" href="/css/colors.css">
 	<link rel="stylesheet" type="text/css" href="/css/responsive.css">
 	<link rel="stylesheet" type="text/css" href="/css/build-core+typography.css">
