--- a/views/loadtest.ejs
+++ b/views/loadtest.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Testing my scalability</title>
-  <script type="text/javascript" src="/javascript/jquery.js"></script>
+  <script type="text/javascript" src="../jquery.js"></script>
 </head>
 <body>
 <button>Load Test</button>
